--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 dark:from-[#3f3d3c] dark:via-zinc-900 dark:to-zinc-900 h-screen w-screen flex flex-col justify-start items-center">
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<app-indic></app-indic>
 </main>
