--- a/src/app/layouts/indic/indic.component.html
+++ b/src/app/layouts/indic/indic.component.html
@@ -1,1 +1,8 @@
-<p>indic works!</p>
+<main class="absolute bottom-4 left-4 text-2xl text-zinc-900 dark:text-zinc-300">
+    <span class="sm:hidden font-bold">XS</span>
+    <span class="hidden sm:flex  md:hidden font-bold">SM</span>
+    <span class="hidden md:flex lg:hidden font-bold">MD</span>
+    <span class="hidden lg:flex xl:hidden font-bold">LG</span>
+    <span class="hidden xl:flex 2xl:hidden font-bold">XL</span>
+    <span class="hidden 2xl:flex font-bold">XL</span>
+</main>
